2010-09-16 Dominique Dumont  <domi.dumont@free.fr> 1.218
	* Fixed missing dependencies in Build.PL (Building from hg
	requires Dist::Zilla and Dist-Zilla-Plugins-CJM >= 3.01)

2010-09-14  Dominique Dumont  <domi.dumont@free.fr> 1.217

	* Added allow_keys_matching parameter in ItselfWarpableElement.pl
	(requires Config::Model 1.207)
	* config-model-edit :doc fix
	* Itself.pm: display hash or list cargo type in dot diagram"
	* BackendDetector.pm: Fixed to handle backend names with embedded
	:: (e.g. Debian::Dep5)

2010-08-13  Dominique Dumont  <domi.dumont@free.fr> 1.216

	* Added accept parameter in Itself/Class.pl
	(requires Config::Model 1.206)
	* Build.PL: added dependency on Tk to avoid CPAN smoke test
	failure

2010-04-06  Dominique Dumont  <dominique.dumont@hp.com> 1.215

	* t/itself.t: Fix skip part to avoid failures when X is not
	available.

2010-03-31  Dominique Dumont  <domi.dumont@free.fr> 1.214

	* config-model-edit (): ensure that model modified by loading data
	or YAML is saved later on by the GUI.

2010-03-25  Dominique Dumont  <dominique.dumont@hp.com> 1.213

	* lib/Config/Model/Itself/BackendDetector.pm (): New class derived
	from Config::Model::Value so config-model-edit can detect
	available read/write plugin backend and propose relevant choice
	for 'backend' model specification.

	* Build.PL: Added dedendency on Pod::POM, depends on Config::Model
	1.001

2010-03-17  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/models/Itself/CommonElement.pl: add match
	parameter from Config::Model 1.001

2010-03-16  Dominique Dumont  <dominique.dumont@hp.com>

	* config-model-edit (): can use -force_load when loading data or
	yaml data.
	* Build.PL: depends on YAML::Any

2010-02-26  Dominique Dumont  <dominique.dumont@hp.com>  1.212

	* Build.PL: depends on Config::Model 0.643

2010-02-25  Dominique Dumont  <dominique.dumont@hp.com>

	* config-model-edit: added load_yaml option to load model from a
	YAML file.
