@@ -1,12 +1,12 @@
 name    = Config-Model-Itself
-version = 1.218
+version = 1.219
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
 copyright_year = 2010
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 1.207
+Config::Model    = 1.211
 Log::Log4perl   = 0
 Config::Model::TkUI = 1.210
 Pod::POM        = 0
